# pImpl

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  class_pimpl_class-members.html  class_pimpl_class.html  class_pimpl_class.js  class_pimpl_class__coll__graph.map  class_pimpl_class__coll__graph.md5  class_singleton-members.html  class_singleton.html  class_singleton.js  class_singleton__coll__graph.map  class_singleton__coll__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  library.json  library.properties  navtreedata.js  navtreeindex0.js  pImpl.code-workspace  p_impl_8h_source.html  p_impl__p_8h_source.html  pimp.code-workspace  platformio.ini  singleton_8h_source.html  struct_pimpl_class_1_1_private-members.html  struct_pimpl_class_1_1_private.html  struct_pimpl_class_1_1_private.js  struct_pimpl_class_1_1_private__coll__graph.map  struct_pimpl_class_1_1_private__coll__graph.md5
.github/docker/: Dockerfile.arm64  Dockerfile.armhf  piduino-key.asc
.github/workflows/: build-native-macos.yml  build-native-windows.yml  build.yml  (+6 more)
examples/: CMakeLists.txt
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
src/: CMakeLists.txt  pImpl.cpp  pImpl.h  pImpl_p.h  pimp.cpp  pimp.h  pimp_p.h  singleton.h
(+48 files in other folders)
